# JustMakeIt

./: .gitignore  Cargo.toml  LICENSE  mk.conf  mk.sh  mk.sh.bak  mk_placeholders.lua  readme.md  test_mk.sh  test_mk.sh.bak
.templates/: python.py
src/: cli.rs  config.rs  error.rs  legacy_config.rs  main.rs  ops.rs  placeholder.rs  template.rs  templater.rs
wiki/: Commands-and-Options.md  Comparisons.md  Getting-Started.md  Home.md  List-Mode.md  Templates-and-Placeholders.md  _Sidebar.md
