[package]
name = "mk"
version = "0.2.0"
edition = "2021"
description = "Just Make It — fast file/dir creation from templates"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
once_cell = "1.19"
