[package]
name = "mk"
version = "2.1.0"
edition = "2021"
description = "Just Make It — fast file/dir creation from templates"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde_json = "1"
once_cell = "1.19"
